fix overflowing long text

--- a/css/jquery.idealselect.styl
+++ b/css/jquery.idealselect.styl
@@ -10,113 +10,115 @@ items-per-scroll = 7
 
 .idealselect
   *
-    box-sizing: border-box
+    box-sizing border-box
 
-  position: relative
-  width: select-width
-  float: left
+  position relative
+  width select-width
+  display inline-block
   clearfix()
 
   &:focus
-    outline: none
+    outline none
 
   ul
     reset-box-model()
-    list-style: none
+    list-style none
 
   .title
-    position: relative
-    display: block
-    padding: .55em 1em
-    line-height: normal
-    text-decoration: none
-    color: darken(title-color, 60)
-    background: #eee
-    background: linear-gradient(lighten(title-color, 15), title-color)
-    border: 1px solid darken(title-color, 20)
-    border-bottom-color: darken(title-color, 30)
-    box-shadow: 0 1px 2px rgba(black, .15)
-    border-radius: radius
+    position relative
+    display block
+    padding .55em 1em
+    padding-right 3.05em
+    line-height normal
+    text-decoration none
+    color darken(title-color, 60)
+    background #eee
+    background linear-gradient(lighten(title-color, 15), title-color)
+    border 1px solid darken(title-color, 20)
+    border-bottom-color darken(title-color, 30)
+    box-shadow 0 1px 2px rgba(black, .15)
+    border-radius radius
 
     &:after
-      content: ""
-      position: absolute
-      right: .55em
-      top: 50%
-      margin-top: -.1em
-      border-width: .4em
-      border-style: solid
-      border-color: transparent
-      border-top-color: #666
+      content ""
+      position absolute
+      right .55em
+      top 50%
+      margin-top -.1em
+      border-width .4em
+      border-style solid
+      border-color transparent
+      border-top-color #666
 
     i
-      position: absolute
-      right: 0
-      top: 0
-      height: 100%
-      width: 2em
-      border-left: 1px solid #aaa
-      box-shadow: -1px 0 white
-      background: title-color
-      border-radius: right radius
+      position absolute
+      right 0
+      top 0
+      height 100%
+      width 2em
+      border-left 1px solid #aaa
+      box-shadow -1px 0 white
+      background title-color
+      border-radius right radius
 
     &:hover
-      background: linear-gradient(lighten(title-color, 20), lighten(title-color, 5))
+      background linear-gradient(lighten(title-color, 20), lighten(title-color, 5))
 
     &:focus
-      outline: none
+      outline none
 
   &:focus .title
-    border-color: #3F9DCC
-    box-shadow: 0 0 1px #3F9DCC
+    border-color #3F9DCC
+    box-shadow 0 0 1px #3F9DCC
 
-  &.open:focus .title
-    border-color: #aaa
-    box-shadow: none
+  &.openfocus .title
+    border-color #aaa
+    box-shadow none
 
   &.open .title
-    border-radius: 0
-    border-radius: top radius
+    border-radius 0
+    border-radius top radius
 
     &:after
-      margin-top: -.6em
-      border-color: transparent
-      border-bottom-color: #666
+      margin-top -.6em
+      border-color transparent
+      border-bottom-color #666
 
   .dropdown
-    display: none
-    position: absolute
-    z-index: 1
-    top: 100%
-    left: 0
-    width: 100%
-    max-height: (2em*items-per-scroll)
-    overflow-y: auto
-    background: white
-    border: 1px solid #aaa
-    border-top: 0
-    border-radius: bottom radius
-    box-shadow: 0 1px 2px rgba(black, .2)
+    display none
+    position absolute
+    z-index 1
+    top 100%
+    left 0
+    width 100%
+    max-height (2em*items-per-scroll)
+    overflow-y auto
+    background white
+    border 1px solid #aaa
+    border-top 0
+    border-radius bottom radius
+    box-shadow 0 1px 2px rgba(black, .2)
 
     li
-      padding: 0 1em
-      height: 2em
-      line-height: 2
-      color: #444
-      cursor: default
+      padding 0 1em
+      height 2em
+      line-height 2
+      color #444
+      cursor default
+      overflow ellipsis
 
       &:hover
-        background: hover-color
+        background hover-color
 
       &.selected,
-      &.selected:active
-        color: white
-        background: selected-color
-        background: linear-gradient(selected-color, lighten(selected-color, 7))
+      &.selectedactive
+        color white
+        background selected-color
+        background linear-gradient(selected-color, lighten(selected-color, 7))
 
   &.open .dropdown
-    display: block
+    display block
 
 .ie9 .idealselect .dropdown
-  width: auto
-  min-width: 100%
+  width auto
+  min-width 100%
